# load-balancer-cofee-example

./: .gitignore  CMakeLists.txt  README.md  loadBalancer  main.cpp
app/: CMakeLists.txt  main.cpp
cmake/: common.cmake
include/cart/: cart.h
include/inputManager/: inputManager.h
include/products/: product.h
src/: CMakeLists.txt
src/cashBox/: cashBox.h
src/outputManager/: outputManager.cpp
src/products/: product.cpp  product.h
tests/: CMakeLists.txt
